# TCalc

./: .clang-format  .clang-tidy  .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt
docs/: user-manual.txt
native/: README.md  bindings.cpp  calculator.cpp  calculator.hpp  setup.py
scripts/: dev
src/: app_state.py  main.py  theme.py
src/core/: __init__.py  engine.py  ops.py  parser.py
src/native/: CMakeLists.txt  Makefile  README.md  bindings.cpp  calculator.cpp  calculator.hpp  setup.py
src/native/lib/: arithmetic.cpp  combinatorics.cpp  transcendental.cpp  trig.cpp  types.hpp
src/native/lib/calc/: arithmetic.cpp  combinatorics.cpp  transcendental.cpp  trig.cpp
src/native/lib/calc/internal/: calculator.hpp  errors.hpp  helpers.hpp
src/native/lib/calc/pub/: calculator.hpp
src/native/lib/internal/: internal.hpp
src/native/lib/parser/: parser.cpp
src/native/lib/parser/pub/: errors.hpp  ops.hpp  parser.hpp
src/native/lib/pub/: calculator.hpp  errors.hpp  types.hpp
src/native/python/: module.cpp
src/native/python/bindings/: bind_angle_unit.cpp  bind_bigcomplex.cpp  bind_bigreal.cpp  bind_calculator.cpp  bind_parser.cpp
src/native/python/include/: bindings.hpp
src/native/tests/: main.cpp
src/native/tests/internal/: test_helpers.hpp
src/native/tests/smoke/: smoke_stress.cpp
src/native/tests/unit/: test_arithmetic.cpp  test_combinatorics.cpp  test_transcendental.cpp  test_trig.cpp
src/tcalc/: __main__.py  app_state.py  config.toml  main.py  theme.py
src/tcalc/core/: __init__.py  constants.py  engine.py  errors.py  ops.py  parser.py  utils.py
src/tcalc/ui/: app.py  config.py  config.toml  styles.py  window.py
src/tcalc/ui/controller/: __init__.py  controller.py  edit_operations.py  utils.py
src/tcalc/ui/controller/menubar/: __init__.py  edit.py  file.py  settings.py
src/tcalc/ui/keyboard/: __init__.py  handler.py  keymap.py  shortcut_manager.py  shortcuts.py
src/tcalc/ui/manubar/: config.py  config.toml  defins.py  menu.py  style.py
src/tcalc/ui/manubar/menus/: edit.py  file.py  settings.py
src/tcalc/ui/widgets/: __init__.py  utils.py
src/tcalc/ui/widgets/calc/: __init__.py  config.py  config.toml  style.py  utils.py
src/tcalc/ui/widgets/calc/display/: __init__.py  display.py  style.py
src/tcalc/ui/widgets/calc/keypad/: keypad.py  keypad_defins.py  style.py
src/tcalc/ui/widgets/calc/topbar/: __init__.py  defins.py  style.py  topbar.py
src/tcalc/ui/widgets/history/: config.py  config.toml  history.py  storage.py  style.py  utils.py
src/ui/: app.py  config.py  config.toml  styles.py  window.py
src/ui/controller/: __init__.py  controller.py  edit_operations.py  utils.py
src/ui/display/: display.py
src/ui/keyboard/: __init__.py  handler.py  shortcuts.py
src/ui/keypad/: keypad.py  keypad_defins.py
src/ui/manubar/: config.py  config.toml  menu.py  style.py
src/ui/manubar/menus/: edit.py  file.py  settings.py
src/ui/widgets/calc/: __init__.py  config.toml
src/ui/widgets/calc/display/: display.py  style.py
src/ui/widgets/calc/keypad/: keypad.py  keypad_defins.py  style.py
src/ui/widgets/history/: config.py  config.toml  history.py  style.py
