[build-system]
requires = ["setuptools>=68.0", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TCalc"
version = "0.5.1"
description = "Advanced calculator with expression parsing"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Tahsin Önemli", email = "tahsin.onemli90@gmail.com" }
]
keywords = ["calculator", "parser", "shunting-yard", "rpn", "gui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10+",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
  "PySide6>=6.0.0",
  "pybind11>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pybind11-stubgen>=2.5.0",
  "ruff>=0.5.0",
]

[project.scripts]
calculator = "tcalc.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["tcalc*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = [
  "build",
  "venv",
  "src/native",
  "src/calc_native*.so",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tcalc"]

[tool.mypy]
mypy_path = "src:stubs"
packages = ["tcalc"]
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["PySide6.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["calc_native", "calc_native.*"]
ignore_missing_imports = true
